PAY-8913: Ignore scheduled discontinued fee versions (#675)
* Rollback approvedFees change

* Improving coverage

* PAY-8913: Fix remove duplicates after discontinued fee change

* Reverting to an older successful commit

* Fix after merge conflict

* Fix after merge conflict

* Minor adjustment to ignore future discontinued fees

* Update to fix SonarCloud and tests

* Adding a helpful comment

* Minor fixes to deduplicateFeesByCode logic

* Minor fixes to deduplicateFeesByCode logic

* Minor fixes code coverage

* Fixed to deprecated code calls

* Correction to comments

* Correction to pact tests

* Correction to pact tests

* Correction to pact tests

* More fixes to pact tests

* Fix to edge case where fee has no current version

* Another update to future fees

* Correction to fee version selection

* Minor fix to multiple versions in the same fee

* Code optimisations

* PAY-8913: Ensure code removes matchingVersion for approved fees