@@ -216,7 +216,7 @@ public abstract class BaseIntegrationTest extends BaseTest {
     protected ResultMatcher versionIsOneAndStatusIsDraft() {
         return body().as(Fee2Dto.class, (feeDto) -> {
             FeeVersionDto v = feeDto.getFeeVersionDtos().get(0);
-            assertTrue(v.getVersion().equals(new Integer(1)));
+            assertTrue(v.getVersion().equals(Integer.valueOf(1)));
             assertTrue(v.getStatus() == FeeVersionStatusDto.draft);
         });
     }
